--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ url: http://whiskeybob.com
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "whiskeybob.com"
 
 #
 # !! You don't need to change any of the configuration flags below !!
